# CrossyRoadGL

./: CMakeLists.txt  README.md
src/: Camera.cpp  Camera.h  Constants.h  Element.cpp  Element.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Level.cpp  Level.h  LevelElement.cpp  LevelElement.h  Lightning.h  Main.cpp  Material.h  Player.cpp  Player.h  ResetScene.cpp  ResetScene.h  Score.cpp  Score.h  Shader.cpp  Shader.h  TextRenderer.cpp  TextRenderer.h  TextureManager.cpp  TextureManager.h  camera.cpp  camera.h  constants.h  element.cpp  element.h  enemy.cpp  enemy.h  entity.cpp  entity.h  game.cpp  (+11 more)
src/Assets/Shaders/: fragment.fs
src/Shared/: Constants.h  Material.h
src/shaders/: fragment.fs  lamp_vertex.vs  level_vertex.vs  vertex.vs
